--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,9 @@
 [submodule "native/speexdsp"]
 	path = native/speexdsp
-	url = https://git.xiph.org/speexdsp.git
+	url = https://github.com/xiph/speexdsp.git
 [submodule "native/opus"]
 	path = native/opus
-	url = https://git.xiph.org/opus.git
-[submodule "native/x264"]
-	path = native/x264
-	url = git://git.videolan.org/x264.git
+	url = https://github.com/xiph/opus.git
 [submodule "native/aom"]
 	path = native/aom
 	url = https://aomedia.googlesource.com/aom
