--- a/native/Makefile
+++ b/native/Makefile
@@ -1,11 +1,15 @@
 JOBS:=$(shell grep -c ^processor /proc/cpuinfo 2>/dev/null)
-EMCC_OPTS:=-O2 -s FILESYSTEM=0 -s INITIAL_MEMORY=134217728
+EMCC_OPTS:=-O2 -s FILESYSTEM=0 -s INITIAL_MEMORY=134217728 -Wl,--import-table
 
 MC_TARGET:=libmediacodec.wasm
 
 OPUS_DIR:=opus
 OPUS_OBJ:=$(OPUS_DIR)/.libs/libopus.a
 OPUS_EXPORTS:='_opus_get_version_string','_opus_encoder_create','_opus_encode_float','_opus_encoder_ctl','_opus_encoder_destroy','_opus_decoder_create','_opus_decode_float','_opus_decoder_ctl','_opus_decoder_destroy'
+
+FLAC_DIR:=flac
+FLAC_OBJ:=$(FLAC_DIR)/src/libFLAC/.libs/libFLAC.a
+FLAC_EXPORTS:='_FLAC__stream_encoder_new','_FLAC__stream_encoder_delete','_FLAC__stream_encoder_set_channels','_FLAC__stream_encoder_set_bits_per_sample','_FLAC__stream_encoder_set_sample_rate','_FLAC__stream_encoder_set_compression_level','_FLAC__stream_encoder_set_blocksize','_FLAC__stream_encoder_init_stream','_FLAC__stream_encoder_finish','_FLAC__stream_encoder_process','_FLAC__stream_encoder_process_interleaved'
 
 SPEEXDSP_DIR:=speexdsp
 SPEEXDSP_OBJ:=$(SPEEXDSP_DIR)/libspeexdsp/.libs/libspeexdsp.a
@@ -18,10 +22,10 @@ AOM_EXPORTS:='_aom_codec_enc_init_ver','_aom_codec_enc_config_default','_aom_cod
 all: $(MC_TARGET)
 clean:
 	rm -f $(MC_TARGET)
-	-for d in $(OPUS_DIR) $(SPEEXDSP_DIR) $(AOM_DIR); do (cd $$d; rm -rf *; git reset --hard); done
+	-for d in $(OPUS_DIR) $(FLAC_DIR) $(SPEEXDSP_DIR) $(AOM_DIR); do (cd $$d; rm -rf *; git reset --hard); done
 
-$(MC_TARGET): $(OPUS_OBJ) $(SPEEXDSP_OBJ) $(AOM_LIB)
-	emcc -o $(MC_TARGET) $(EMCC_OPTS) -s EXPORTED_FUNCTIONS="[$(OPUS_EXPORTS),$(SPEEXDSP_EXPORTS),$(AOM_EXPORTS)]" $^
+$(MC_TARGET): $(OPUS_OBJ) $(FLAC_OBJ) $(SPEEXDSP_OBJ) $(AOM_LIB)
+	emcc -o $(MC_TARGET) $(EMCC_OPTS) -s EXPORTED_FUNCTIONS="[$(OPUS_EXPORTS),$(FLAC_EXPORTS),$(SPEEXDSP_EXPORTS),$(AOM_EXPORTS)]" $^
 
 $(OPUS_OBJ): $(OPUS_DIR)/Makefile
 	cd $(OPUS_DIR); emmake make -j$(JOBS)
@@ -29,6 +33,13 @@ $(OPUS_DIR)/Makefile: $(OPUS_DIR)/configure
 	cd $(OPUS_DIR); emconfigure ./configure --disable-extra-programs --disable-doc --disable-asm --disable-rtcd --disable-intrinsics --disable-stack-protector
 $(OPUS_DIR)/configure:
 	cd $(OPUS_DIR); ./autogen.sh
+
+$(FLAC_OBJ): $(FLAC_DIR)/Makefile
+	cd $(FLAC_DIR); emmake make -j$(JOBS)
+$(FLAC_DIR)/Makefile: $(FLAC_DIR)/configure
+	cd $(FLAC_DIR); emconfigure ./configure --disable-asm-optimizations --disable-sse --disable-cpplibs --disable-ogg --disable-oggtest --disable-examples --disable-rpath --enable-static --disable-shared --disable-xmms-plugin
+$(FLAC_DIR)/configure:
+	cd $(FLAC_DIR); ./autogen.sh
 
 $(SPEEXDSP_OBJ): $(SPEEXDSP_DIR)/Makefile
 	cd $(SPEEXDSP_DIR); emmake make -j$(JOBS)
